package csd214.bookstore.pojos;

import java.util.Objects;
import java.util.Scanner;

public class Pen extends Stationary {
    private String color;

    public Pen() {
    }

    public Pen(String brand, double price, int quantity, String color) {
        super(brand, price, quantity);
        this.color = color;
        System.out.println("You added a pen to your inventory");
    }

    public String getColor() {
        return color;
    }

    public void setColor(String color) {
        this.color = color;
    }

    @Override
    public void initialize(Scanner input){
        super.initialize(input);

        System.out.println("Enter Color:");
        setColor(getInput(input, "Undefined"));
    }

    @Override
    public void edit(Scanner input) {
        super.edit(input);

        System.out.println("Edit Color [" + this.color + ":");
        setColor(getInput(input, this.color));
    }

    @Override
    public String toString() {
        return "Pen{" +
                "color='" + color + ", " + super.toString() +  '\'' +
                '}';
    }

    @Override
    public void sellItem(){
        System.out.println("Selling Pen {color: " + color + super.toString() + "}");
        setQuantity(getQuantity() - 1);
    }

    @Override
    public boolean equals(Object o) {
        if (!(o instanceof Pen pen)) return false;
        if (!super.equals(o)) return false;
        return Objects.equals(color, pen.color);
    }

    @Override
    public int hashCode() {
        return Objects.hash(super.hashCode(), color);
    }
}