classDiagram
    Editable <|--Product
    Product <|--Ticket
    Product <|--Publication
    Publication <|-- Book
    Publication <|-- Magazine
    Magazine <|-- DiscMag
    SaleableItem <|.. Product
    Serializable <|.. Product
    Product <-- CashTill
    Product <|-- Stationary
    Stationary <|-- Pen
    Stationary <|-- Notebook
    Product <|-- MusicCollection
    MusicCollection <|-- Vinyl
    MusicCollection <|-- Digital


    class Product{
        -String productId
    }

    class Serializable{
        <<interface>>
    }
    class Ticket{
        -String description
        -double price
        +sellItem()
    }
    class Editable{
        <<abstract>>
        -Scanner input
        +String getInput(String)
        +int getInput(int)
        +double getInput(double)
        +boolean getInput(boolean)
        +Date getInput(Date)
        +Enum getInput(Enum)
        +edit()*
        +initialize()*

    }
    class Publication{
        <<Abstract>>
        -String title
        -double price
        -int copies
        +getPrice()

        +Publication()
        +Publication(String title, double price, int copies)
        +toString()
        +equals()
        +hashCode()

    }
    class Book{
        -String author
        +edit()
        +initialize()
        +sellItem()

        +Book()
        +Book(String author)
        +Book(String author, String title, double price, int copies)
        +toString()
        +equals()
        +hashCode()

    }
    class Magazine{
        -int orderQty
        -java.util.Date currentIssue

        +Magazine()
        +Magazine(int orderQty, Date currentIssue, \n String title, double price, int copies)

        +edit()
        +initialize()
        +sellItem()
    }
    class DiscMag{
        -boolean hasDisc
        +edit()
        +initialize()
        +sellItem()

        +DiscMag()
        +DiscMag(boolean, hasDisc, int orderQty, Date currentIssue, \n String title, double price, int copies)

    }
    class CashTill{
        -double runningTotal
        +CashTill()
        +showTotal()
        +sellItem(SaleableItem item)
    }
    class SaleableItem {
        <<interface>>
        +sellItem()
        +getPrice()
    }

    %% Directed Task

    class Stationary {
        <<Abstract>>
        -String brand
        -double price
        -int quantity

        +getPrice()
        +toString()
        +equals()
        +hashCode()
    }

    class Pen {
        -String color

        +Pen()
        +Pen(String color)
        +edit()
        +initialize()
        +toString()
        +sellItem()
    }

    class Notebook {
        -int pageCount

        +Notebook()
        +Notebook(int pageCount)
        +edit()
        +initialize()
        +toString()
        +sellItem()
    }

    %% Initiative Task
    %% My idea: sell music in digital format

    %% I decided to set cover as a string so it can store an image link
    class MusicCollection{
        <<Abstract>>>
        -String title
        -String artist
        -String genre
        -int year
        -double price

        +getPrice()
        +toString()
        +equals()
        +hashCode()
    }

    class Vinyl {
        -String discColor
        -int copies

        +Vinyl()
        +Vinyl(String title, String artist, String genre, double price, \n String discColor, int copies)
        +edit()
        +initialize()
        +toString()
        +sellItem()
    }

    class Digital {
        -String link

        +Digital()
        +Digital(String title, String artist, String genre, double price, \n String link)
        +edit()
        +initialize()
        +toString()
        +sellItem()
    }



